# transfold-bot

./: .env.example  .gitignore  Dockerfile  bot.py  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
locales/: en.json
scripts/: database_manager.py  image_converters.py  utils.py  video_converters.py
